# hello-c

./: .gitignore  CMakeLists.txt  VS-Code-Cmake-Configure.md  VS-Code-Cmake.md  main.c  main.cpp  tester.cpp
day-00/: f.c
day01/: f.c
day02/: day02-array.c  day02-enum.c  day02-extern-i.c  day02-for.c  day02-variable-define.c  f.c
day03/: day03-pointer.c
day04/: day04-function.c  day04-stdio.c  day04-string.c
day05/: day05-file.c  day05-oc.c  test.txt
day06/: test-signal.c
day07/: cool-user.cpp  user.cpp  user.h
day08/: thread.cpp
day09/: test_curl.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
